# omniwrite

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  LICENSE  README.md  SECURITY.md  config.example.yaml  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  prompt_improvement.yaml
.github/workflows/: ci.yml  release.yml
backend/: __init__.py  main.py
backend/agents/: __init__.py  blog_writer.py  brief_extractor.py  editor_agent.py  graph.py  linkedin_commenter.py  linkedin_writer.py  outline_agent.py  reddit_writer.py  research_agent.py  strategy_agent.py
backend/api/: __init__.py  middleware.py
backend/api/routes/: __init__.py  brand.py  generate.py  health.py
backend/cli/: main.py
backend/core/: __init__.py  config.py  llm_factory.py  observability.py  plugin_registry.py  prompt_loader.py
backend/core/prompts/agents/: brief_extractor.yaml  editor.yaml  outline.yaml  strategy.yaml
backend/core/prompts/system/: brand_injector.yaml
backend/models/: __init__.py  brand.py  request.py  state.py
backend/plugins/: __init__.py  base.py  blog_plugin.py  linkedin_comment_plugin.py  linkedin_plugin.py  reddit_plugin.py
backend/providers/: __init__.py
backend/providers/search/: __init__.py  base.py  brave_provider.py  duckduckgo_provider.py  tavily_provider.py
backend/services/: __init__.py  brand_service.py  job_service.py  storage.py
backend/tests/: __init__.py  test_agents.py  test_api.py  test_llm_factory.py  test_model_overrides.py
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/brand/: BrandSetupForm.module.css  BrandSetupForm.tsx  BrandSidebar.module.css  BrandSidebar.tsx  OnboardingWizard.module.css  OnboardingWizard.tsx  VoiceSelector.module.css  VoiceSelector.tsx
frontend/src/components/chat/: AgentProgress.module.css  AgentProgress.tsx  ChatInterface.module.css  ChatInterface.tsx  ChatMessage.module.css  ChatMessage.tsx  OutlineApproval.module.css  OutlineApproval.tsx
frontend/src/components/layout/: ThreePanelLayout.module.css  ThreePanelLayout.tsx
frontend/src/components/output/: ContentPanel.module.css  ContentPanel.tsx
frontend/src/components/settings/: GenerationSettings.module.css  GenerationSettings.tsx  GenerationSettingsModal.module.css  GenerationSettingsModal.tsx  ModelToggle.module.css  ModelToggle.tsx
frontend/src/components/ui/: Modal.module.css  Modal.tsx  TagsInput.module.css  TagsInput.tsx  Toast.module.css  Toast.tsx
frontend/src/lib/: api.ts  brandStore.ts  generationStore.ts
frontend/src/lib/hooks/: useJobStream.ts
frontend/src/types/: brand.ts  generation.ts
