[project]
name = "omniwrite"
version = "0.1.0"
description = "Agentic multi-platform content generation tool — blog, Reddit, LinkedIn"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "OmniWrite contributors" }]
keywords = ["ai", "content", "blog", "linkedin", "reddit", "langchain", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.9",

    # Agents & LLM
    "langgraph>=0.2.50",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "litellm>=1.55.0",

    # Data validation & settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Database
    "sqlmodel>=0.0.21",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",

    # Cache / queue
    "redis>=5.1.0",

    # HTTP
    "httpx>=0.27.0",

    # Templating (for YAML prompts)
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.8.0",

    # Search providers
    "tavily-python>=0.5.0",
    "duckduckgo-search>=6.3.0",

    # Observability
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "prometheus-client>=0.21.0",

    # Publishing integrations
    "ghost-client>=0.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[project.scripts]
omniwrite = "backend.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

# ── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

# ── Mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
addopts = "--cov=backend --cov-report=term-missing"
